--- a/LibriVox/StoryBoard/HomePage.storyboard
+++ b/LibriVox/StoryBoard/HomePage.storyboard
@@ -35,26 +35,32 @@
                                 <rect key="frame" x="16" y="383" width="343" height="330"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             </activityIndicatorView>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" rowHeight="145" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="lcC-6f-bEm">
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" dataMode="prototypes" style="plain" rowHeight="145" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="lcC-6f-bEm">
                                 <rect key="frame" x="16" y="94" width="343" height="635"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                 <color key="separatorColor" red="0.57919406890000003" green="0.1280144453" blue="0.57268613580000005" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <inset key="separatorInset" minX="15" minY="0.0" maxX="0.0" maxY="0.0"/>
                                 <view key="tableHeaderView" contentMode="scaleToFill" id="RcL-Zk-OlW">
-                                    <rect key="frame" x="0.0" y="0.0" width="343" height="263"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="343" height="315"/>
                                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                     <subviews>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Home" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ome-gd-QKQ">
+                                            <rect key="frame" x="0.0" y="0.0" width="343" height="33"/>
+                                            <fontDescription key="fontDescription" name="Nunito-Bold" family="Nunito" pointSize="24"/>
+                                            <nil key="textColor"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
                                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="cPd-i5-3P4" customClass="RoundView" customModule="LibriVox" customModuleProvider="target">
-                                            <rect key="frame" x="0.0" y="0.0" width="343" height="218"/>
+                                            <rect key="frame" x="0.0" y="43" width="343" height="218"/>
                                             <subviews>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="252" verticalCompressionResistancePriority="751" text="Hello IceQueen," textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="aoj-7l-jfp">
-                                                    <rect key="frame" x="15" y="20" width="132.66666666666666" height="24.666666666666671"/>
-                                                    <fontDescription key="fontDescription" name="Nunito-Bold" family="Nunito" pointSize="18"/>
+                                                    <rect key="frame" x="15" y="20" width="123" height="23.333333333333329"/>
+                                                    <fontDescription key="fontDescription" name="Nunito-SemiBold" family="Nunito" pointSize="17"/>
                                                     <color key="textColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="What about continue reading:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="CL0-cR-Uld">
-                                                    <rect key="frame" x="15" y="46.666666666666664" width="223" height="21.333333333333336"/>
+                                                    <rect key="frame" x="15" y="45.333333333333329" width="223" height="22.666666666666671"/>
                                                     <fontDescription key="fontDescription" name="Nunito-Light" family="Nunito" pointSize="17"/>
                                                     <color key="textColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                     <nil key="highlightedColor"/>
@@ -66,7 +72,7 @@
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Author: Rick Riordan" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Pht-Q2-Q9t">
-                                                    <rect key="frame" x="102" y="122.33333333333331" width="180" height="18"/>
+                                                    <rect key="frame" x="102" y="122.33333333333334" width="180" height="18"/>
                                                     <fontDescription key="fontDescription" name="Nunito-ExtraLight" family="Nunito" pointSize="13"/>
                                                     <color key="textColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                     <nil key="highlightedColor"/>
@@ -139,13 +145,13 @@
                                             </constraints>
                                         </view>
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Trending Books" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="xps-1z-4ew">
-                                            <rect key="frame" x="0.0" y="238" width="293" height="23.333333333333314"/>
-                                            <fontDescription key="fontDescription" name="Nunito-SemiBold" family="Nunito" pointSize="17"/>
+                                            <rect key="frame" x="0.0" y="281" width="293" height="23.333333333333314"/>
+                                            <fontDescription key="fontDescription" name="Nunito-Bold" family="Nunito" pointSize="17"/>
                                             <nil key="textColor"/>
                                             <nil key="highlightedColor"/>
                                         </label>
                                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="keB-bU-OFe">
-                                            <rect key="frame" x="317.33333333333331" y="237" width="25.666666666666686" height="25.666666666666686"/>
+                                            <rect key="frame" x="317.33333333333331" y="280" width="25.666666666666686" height="25.666666666666686"/>
                                             <color key="tintColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                             <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
                                             <state key="normal">
@@ -160,17 +166,20 @@
                                     <constraints>
                                         <constraint firstAttribute="trailing" secondItem="xps-1z-4ew" secondAttribute="trailing" constant="50" id="4Wu-um-BRg"/>
                                         <constraint firstAttribute="trailing" secondItem="cPd-i5-3P4" secondAttribute="trailing" id="DcB-EC-3jD"/>
+                                        <constraint firstItem="ome-gd-QKQ" firstAttribute="top" secondItem="RcL-Zk-OlW" secondAttribute="top" id="E7w-fg-AEM"/>
                                         <constraint firstItem="xps-1z-4ew" firstAttribute="top" secondItem="cPd-i5-3P4" secondAttribute="bottom" constant="20" id="ELV-j6-gec"/>
                                         <constraint firstItem="xps-1z-4ew" firstAttribute="leading" secondItem="RcL-Zk-OlW" secondAttribute="leading" id="EZQ-Uc-M5b"/>
+                                        <constraint firstItem="ome-gd-QKQ" firstAttribute="leading" secondItem="RcL-Zk-OlW" secondAttribute="leading" id="F9k-tO-LqX"/>
                                         <constraint firstItem="keB-bU-OFe" firstAttribute="centerY" secondItem="xps-1z-4ew" secondAttribute="centerY" id="Zr1-xC-5hX"/>
-                                        <constraint firstItem="cPd-i5-3P4" firstAttribute="top" secondItem="RcL-Zk-OlW" secondAttribute="top" id="dwe-aS-3xo"/>
+                                        <constraint firstItem="cPd-i5-3P4" firstAttribute="top" secondItem="ome-gd-QKQ" secondAttribute="bottom" constant="10" id="dbP-AW-rKy"/>
                                         <constraint firstAttribute="trailing" secondItem="keB-bU-OFe" secondAttribute="trailing" id="heD-9d-52A"/>
                                         <constraint firstItem="cPd-i5-3P4" firstAttribute="leading" secondItem="RcL-Zk-OlW" secondAttribute="leading" id="u3B-pT-6AP"/>
+                                        <constraint firstAttribute="trailing" secondItem="ome-gd-QKQ" secondAttribute="trailing" id="uFa-SX-Yze"/>
                                     </constraints>
                                 </view>
                                 <prototypes>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="cell" rowHeight="145" id="E03-yn-IXx" customClass="CustomCellBook" customModule="LibriVox" customModuleProvider="target">
-                                        <rect key="frame" x="0.0" y="313" width="343" height="145"/>
+                                        <rect key="frame" x="0.0" y="365" width="343" height="145"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="E03-yn-IXx" id="rkb-Iu-aQd">
                                             <rect key="frame" x="0.0" y="0.0" width="343" height="145"/>
@@ -530,7 +539,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Trending Books" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="zhp-6e-8Kk">
-                                <rect key="frame" x="16" y="94" width="166.33333333333334" height="31.666666666666686"/>
+                                <rect key="frame" x="16" y="94" width="166.33333333333334" height="31.666666666666671"/>
                                 <fontDescription key="fontDescription" name="Nunito-Bold" family="Nunito" pointSize="23"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
@@ -744,11 +753,11 @@
             </objects>
             <point key="canvasLocation" x="29.600000000000001" y="0.0"/>
         </scene>
-        <!--Homepage-->
+        <!--Navigation Controller-->
         <scene sceneID="cK6-JB-TZJ">
             <objects>
                 <navigationController automaticallyAdjustsScrollViewInsets="NO" id="m8j-It-3zh" sceneMemberID="viewController">
-                    <tabBarItem key="tabBarItem" title="Homepage" id="HhG-4t-G5a">
+                    <tabBarItem key="tabBarItem" title="" id="HhG-4t-G5a">
                         <imageReference key="image" image="house" catalog="system" symbolScale="large" renderingMode="template"/>
                         <imageReference key="landscapeImage" image="house" catalog="system" symbolScale="large" renderingMode="template"/>
                         <imageReference key="largeContentSizeImage" image="house" catalog="system" symbolScale="large" renderingMode="template"/>
